--- a/mentions/build.gradle
+++ b/mentions/build.gradle
@@ -7,8 +7,8 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 25
-    versionCode 1
-    versionName "1.0"
+    versionCode 2
+    versionName "1.1"
 
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
@@ -28,3 +28,18 @@ dependencies {
   compile 'com.android.support:appcompat-v7:25.3.0'
   testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.novoda.bintray-release'//添加
+
+//添加
+publish {
+  userOrg = 'bobomee'//bintray.com用户名
+  groupId = 'com.bobomee.android'//jcenter上的路径
+  artifactId = 'mentions'//项目名称
+  publishVersion = '1.0.1'//版本号
+  desc = 'this is for library for mentions in Android'//描述，不重要
+  website = 'https://github.com/BoBoMEe/Mentions'//网站，最好有，不重要
+}
+
+/*
+./gradlew clean build bintrayUpload -PbintrayUser=bobomee -PbintrayKey=a8bea95a15202a6f8580bb4dc47e3d78f5cc0928 -PdryRun=false*/
