--- a/mentions/build.gradle
+++ b/mentions/build.gradle
@@ -7,7 +7,7 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 25
-    versionCode 3M
+    versionCode 3
     versionName "1.2"
 
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
