--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
+    <activity android:name=".MainActivity"
+        android:windowSoftInputMode="adjustPan">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -16,8 +17,8 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".TagList"/>
-    <activity android:name=".UserList"/>
+    <activity android:name=".edit.TagList"/>
+    <activity android:name=".edit.UserList"/>
   </application>
 
 </manifest>
