--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
 
     <activity android:name=".edit.TagList"/>
     <activity android:name=".edit.UserList"/>
+    <activity android:name=".TwoActivity">
+
+    </activity>
+    <activity android:name=".ThreeActivity">
+
+    </activity>
   </application>
 
 </manifest>
